Fixed broken footer links. Fixed broken style on email confirmation html. Removed banner positioning from small banner displays in browse. Added quiz images next to trending and popular quiz lists. Added sign up incentive when clicking radio buttons while unauthenticated on the quiz page.

--- a/TwolipsDating/Content/Site.css
+++ b/TwolipsDating/Content/Site.css
@@ -1022,9 +1022,13 @@ input[readonly] {
         float: right !important;
     }
 
+.search-result-column {
+    height: 310px;
+}
+
 .search-result-panel {
     height: 200px;
-    margin-bottom: 20px;
+    overflow: hidden;
 }
 
 .search-result-thumbnail {
